--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@
     --line-height-normal: 1.7;
     --line-height-small: 1.2;
 
-    --gris: #E7EAEF;    ;
+    --gris: #E7EAEF;
     --pink: #065653;
     --black: black;
 
